# faceDetection

./: CMakeLists.txt  eye_detection_result.avi  face_detection_result.avi  fullbody_detection_result.avi  main.cpp
